--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <div name="about-header" class="about-header">
-  <!-- Include the 'about us' text here-->
+    <h1>About Us</h1>
+  Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
 </div>
 
 <h2 name="title">Our Team</h2>
